# RightAngledTriangle

./: CMakeLists.txt  Point.cpp  Point.h  RightAngledTriangle.cpp  RightAngledTriangle.h  main.cpp
